# aimdk

./: .gitignore  AGENTS.md  CLAUDE.md  README.en.md  README.md  TELEOP_GUIDE.md  autostart.sh  autostart_nodes.conf  run_docs.sh  topics_and_services  version
scripts/: test_udp_vr.py  test_vr_data.json  x2_mujoco_teleop_sim.py
src/aimdk_msgs/: CMakeLists.txt  package.xml
src/aimdk_msgs/interface/robot/common/msg/: CommonRequest.msg  CommonResponse.msg  CommonState.msg  CommonTaskResponse.msg  MessageHeader.msg  RequestHeader.msg  ResponseHeader.msg
src/aimdk_msgs/interface/robot/face_ui/: FaceEmojiStatus.msg
src/aimdk_msgs/interface/robot/face_ui/srv/: PlayEmoji.srv  PlayVideo.srv  PlayVideoGroup.srv
src/aimdk_msgs/interface/robot/hal/audio/msg/: AudioCapture.msg  AudioData.msg  AudioInfo.msg  AudioPlayback.msg  FocusRequester.msg  FocusResponse.msg  PlayStateChange.msg  PlayStateType.msg
src/aimdk_msgs/interface/robot/hal/audio/srv/: AbandonAudioFocus.srv  GetMute.srv  GetVolume.srv  SetMute.srv  SetVolume.srv
src/aimdk_msgs/interface/robot/hal/msg/: DomainErrorState.msg  HandCommand.msg  HandCommandArray.msg  HandState.msg  HandStateArray.msg  HandTouchSensorData.msg  HandType.msg  JointCommand.msg  JointState.msg  JointStateArray.msg  PmuState.msg  TouchState.msg
src/aimdk_msgs/interface/robot/hal/srv/: GetAllJointState.srv  GetHandType.srv  LedStripCommand.srv
src/aimdk_msgs/interface/robot/interaction/msg/: AgentProperties.msg  AgentPropertiesValue.msg  AgentPropertyIdType.msg  AudioVadStateType.msg  PlayMediaFileRequest.msg  PlayTtsRequest.msg  PlayTtsResponse.msg  ProcessedAudioOutput.msg  TtsPriorityLevel.msg
src/aimdk_msgs/interface/robot/interaction/srv/: GetMicSourceRequest.srv  PlayMediaFile.srv  PlayTts.srv  SetAgentPropertiesRequest.srv  SetMicSourceRequest.srv
src/aimdk_msgs/interface/robot/mc/action/: McAction.msg  McActionCommand.msg  McActionInfo.msg  McActionStatus.msg
src/aimdk_msgs/interface/robot/mc/action/srv/: GetMcAction.srv  SetMcAction.srv
src/aimdk_msgs/interface/robot/mc/motion/msg/: McControlArea.msg  McInputAction.msg  McInputSource.msg  McLocomotionVelocity.msg  McPresetMotion.msg
src/aimdk_msgs/interface/robot/mc/motion/srv/: GetCurrentInputSource.srv  SetMcInputSource.srv  SetMcPresetMotion.srv
src/aimdk_msgs/interface/robot/sm/msg/: SystemStatus.msg
src/aimdk_msgs/interface/robot/sm/srv/: GetSystemState.srv  MigrateSystemState.srv
src/aimdk_msgs/interface/robot/teleop_bridge/data/: VRControllerAction.msg  VRControllerState.msg  VRData.msg  VRNetwork.msg
src/examples/: CMakeLists.txt  package.xml
src/examples/launch/: example.launch.py
src/examples/src/autonomous/: slam.cpp
src/examples/src/hal/: echo_camera_head_rear.cpp  echo_camera_rgbd.cpp  echo_camera_stereo.cpp  echo_head_touch_sensor.cpp  echo_imu_data.cpp  echo_lidar_data.cpp  hand_control.cpp  motocontrol.cpp  omnihand_control.cpp  omnihand_touch.cpp  take_photo.cpp
src/examples/src/interaction/: mic_receiver.cpp  play_emoji.cpp  play_lights.cpp  play_media.cpp  play_tts.cpp  play_video.cpp
src/examples/src/mc/: get_current_input_source.cpp  get_mc_action.cpp  keyboard.cpp  mc_locomotion_velocity.cpp  preset_motion_client.cpp  set_mc_action.cpp  set_mc_input_source.cpp
src/examples/src/utils/: migrate_system_state.cpp
src/examples/src/vr_teleop/: hand_teleop_node.cpp  parse_x2_urdf.py  vr_teleop_node.cpp
src/py_examples/: package.xml  setup.cfg  setup.py
src/py_examples/py_examples/: ai_voice_chat.py  debug_mc_state.py  echo_camera_head_rear.py  echo_camera_rgbd.py  echo_camera_stereo.py  echo_head_touch_sensor.py  echo_imu_data.py  echo_lidar_data.py  get_current_input_source.py  get_mc_action.py  get_mic_source.py  hand_control.py  keyboard.py  leisai_hand_control.py  mc_locomotion_velocity.py  mic_raw_receiver.py  mic_receiver.py  migrate_system_state.py  motocontrol.py  omnihand_control.py  omnihand_touch.py  play_audio_stream.py  play_emoji.py  play_lights.py  play_media.py  play_tts.py  play_video.py  preset_motion_client.py  rc_hand_sync.py  set_mc_action.py  set_mc_input_source.py  set_mic_source.py  slam.py  take_photo.py  udp_vr_bridge.py  voice_command_ip.py
src/ruckig/: CMakeLists.txt  package.xml
src/ruckig/src/ruckig/: brake.cpp  cloud_client.cpp  position_first_step1.cpp  position_first_step2.cpp  position_second_step1.cpp  position_second_step2.cpp  position_third_step1.cpp  position_third_step2.cpp  python.cpp  velocity_second_step1.cpp  velocity_second_step2.cpp  velocity_third_step1.cpp  velocity_third_step2.cpp  wasm.cpp
