<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>examples</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ouyangyuan@agibot.com">yjh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 声明构建和运行时依赖 -->
  <depend>aimdk_msgs</depend>
  <depend>opencv</depend>
  <build_depend>ruckig</build_depend>
  <exec_depend>ruckig</exec_depend>

  <exec_depend>libncurses-dev</exec_depend>

  <build_depend>libcurl</build_depend>
  <build_export_depend>libcurl</build_export_depend>
  <exec_depend>libcurl</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
