<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ruckig</name>
  <version>0.9.2</version>
  <description>Online trajectory generation for real-time robot control</description>
  <maintainer email="ouyangyuan@airbot.com">ouyangyuan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 